# geom_cast

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
cmake/: config_extras.cmake
include/geom_cast/: geom_cast.hpp  point_cast.hpp  rot_cast.hpp
src/: examples.cpp
utest/: test.cpp
