<package format="2">
  <name>geom_cast</name>
  <version>0.0.0</version>
  <description>
    Clean conversion between different point and rotation types used throughout ROS.
    Conversion is type-safe and has NO performance penalty relative to manual conversion.
  </description>

  <maintainer email="dimatura@cmu.edu">Daniel Maturana</maintainer>

  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/geom_cast</url> -->

  <author email="dimatura@cmu.edu">Daniel Maturana</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

</package>
